--- a/css/style.css
+++ b/css/style.css
@@ -82,108 +82,25 @@ header{
 }
 
 
-/* range */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-   display: block;
-}
-
-article {
-    width: 50%;
-    margin: 30px auto;
-}
-input[type=range] {
-    width: 100%;
-}
-.rangeslider input[type=range] {
-    -webkit-appearance: none;
-}
-.rangeslider  input[type=range]:focus {
-    outline: none;
-}
-/*webkit (Chrome)의 경우*/
-.rangeslider input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 5px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: #10482d;
-}
-.rangeslider input[type=range]::-webkit-slider-thumb {
-    border: 1px solid #10482d;
-    height: 15px;
-    width: 10px;
-    background: #ffffff;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -5px; /*chrome의 경우 margin-top값을 부여해야합니다.*/
-}
-.rangeslider input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #10482d; /*네모버튼에 포커스를 줬을때 뒤에 라인(ㅡ)의 효과*/
-}
-/*Firefox의 경우*/
-.rangeslider input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 5px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: #10482d;
-}
-.rangeslider input[type=range]::-moz-range-thumb {
-    border: 1px solid #10482d;
-    height: 15px;
-    width: 10px;
-    background: #ffffff;
-    cursor: pointer;
-}
-/*IE의 경우*/
-.rangeslider input[type=range]::-ms-track {
-    width: 100%;
-    height: 5px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-}
-.rangeslider input[type=range]::-ms-fill-lower {
-    background: #10482d;
-}
-.rangeslider input[type=range]::-ms-fill-upper {
-    background: #10482d;
-}
-.rangeslider input[type=range]::-ms-thumb {
-    margin-top: 1px;
-    border: 1px solid #10482d;
-    height: 15px;
-    width: 10px;
-    background: #ffffff;
-    cursor: pointer;
-}
-
-.rangeslider input[type=range]:focus::-ms-fill-lower {
-    background: #10482d;/*네모버튼에 포커스를 줬을때 뒤에 라인(ㅡ)의 효과*/
-}
-
-.rangeslider input[type=range]:focus::-ms-fill-upper {
-    background: #10482d; /*네모버튼에 포커스를 줬을때 뒤에 라인(ㅡ)의 효과*/
+.rangeslider input{
+    margin: 20px 0;
 }
 
 
 /* 시작하기 및 포기 버튼 */
+
 .buttonStart, .buttonStop {
     border-radius: 5px;
     font-size:0;
 }
 .buttonStart{
     background: url(../img/startBtn.png) #fff no-repeat center;
-    background-color: #fff;
     padding:30px;
     border:none;
     width: 300px;
 }
 .buttonStop {
-    background: url(../img/stopBtn.png) #fff no-repeat center;
+    background: url(../img/stopBtn.png) no-repeat center;
     background-color: transparent;
     border: 4px solid #fff;
     padding:20px;
