--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
 
+html {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 body {
     background: url(../img/bg01.png) #50a387 no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -15,6 +22,8 @@ body {
     font-size: 10px;
     font-family: 'Noto Sans KR', sans-serif !important;
     color: #fff;
+
+    position :relative;
 }
 
 a {
@@ -52,7 +61,8 @@ legend {
 
 #menu {
     font-size: 1.5rem;
-    position: fixed;
+    /* 수정 */
+    position: absolute; 
     right: 50px;
     top: 20px;
     z-index: 100;
