--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,20 +156,20 @@ legend {
 
 /* 시작하기 및 포기 버튼 */
 
-.buttonStart,
-.buttonStop {
+.startButton,
+.stopButton {
     border-radius: 5px;
     font-size: 0;
 }
 
-.buttonStart {
+.startButton {
     background: url(../img/startBtn.png) #fff no-repeat center;
     padding: 30px;
     border: none;
     width: 300px;
 }
 
-.buttonStop {
+.stopButton {
     background: url(../img/stopBtn.png) no-repeat center;
     background-color: transparent;
     border: 4px solid #fff;
