code refactoring 4 1. 이벤트 핸들러   .onmouseleave = bodyonmouseleave;코드를   .onmouseleave = mouseleaveFromBody;코드로 바꿨음   이유는 더의미있는 함수이름으로 바꾸기 위함 2. css 선택자 .background를 rangeSliderBackground로 바꿈 3. mainImg06, mainImg07.img추가   이유는 코드 줄이면서 어쩔수 없이 추가함 4. index.html를 indexRefactoring.js에 연동시킴

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,7 +144,7 @@ legend {
     margin: 20px 0;
 }
 
-.background {
+.rangeSliderBackground {
     background: rgb(138, 224, 191);
     width: 0;
     height: 14px;
