--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
 
 html {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+f
 }
 
 body {
@@ -228,18 +225,10 @@ legend {
 }
 
 .statistics .totalTime {
-    float: left;
-    display: inline-block;
+    text-align:left;
 }
 
-.statistics .treeNum {
-    float: right;
-    display: inline-block;
-}
 
-.myChart{
-    height: 40px;
-}
 /* 반응형 */
 @media (min-width:801px) and (max-width: 1200px) {
     .imgProject {
